# Bioinfo

./: main.py  pyproject.toml
README.md/: README.txt
code/: Analysis.ipynb  Functions.py  Task_15.ipynb
data/processed/csv/: analysis_results.csv
